--- a/style.scss
+++ b/style.scss
@@ -54,13 +54,13 @@ body {
     &__divider {
         width: 100%;
         height: 20px;
-        background-image: url("./public/images/pattern-divider-mobile.svg");
+        background-image: url("/images/pattern-divider-mobile.svg");
         background-repeat: no-repeat;
         background-position: center;
         margin-bottom: 1.5em;
 
         @media screen and (min-width: 50em) {
-            background-image: url("./public/images/pattern-divider-desktop.svg");
+            background-image: url("/images/pattern-divider-desktop.svg");
         }
     }
 
